# PGM-index

./: .gitignore  .gitmodules  .lgtm.yml  .replit  .travis.yml  404.html  CMakeLists.txt  CNAME  README.md  example.cpp  index.html  index.xml  sitemap.xml  tuner.cpp
.github/workflows/: build.yml  codeql.yml
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  plots.ipynb
c-interface/: CMakeLists.txt  cpgm.cpp  cpgm.h
c-interface/examples/: CMakeLists.txt  simple.c  updates.c
categories/: index.html  index.xml
css/: style.min.47b485d84ade20739e6d7876653baf13d09ef0ece9625f11c9f5c627ed07eda4.css  style.min.6ac69e29ffc4779f1d12d173a6fa6bd92fc7d9452461a1279b51006a4098841a.css
docs/: index.html  index.xml
docs/benchmark/: index.html
docs/building-the-code/: index.html
docs/computational-complexities/: index.html
docs/cpp-reference/: index.html
docs/python-reference/: index.html
docs/tuner/: index.html
examples/: CMakeLists.txt  mapped.cpp  multidimensional.cpp  multiset.cpp  simple.cpp  updates.cpp
include/: packed_vector.hpp  pgm_index.hpp  pgm_index_compressed.hpp  pgm_index_dynamic.hpp  pgm_index_in_memory.hpp  piecewise_linear_model.hpp  sdsl.hpp  tuner.hpp  utils.hpp
include/pgm/: eytzinger_array.hpp  pgm_index.hpp  pgm_index_compressed.hpp  pgm_index_dynamic.hpp  pgm_index_eytzinger.hpp  pgm_index_in_memory.hpp  pgm_index_variants.hpp  piecewise_linear_model.hpp  sdsl.hpp
kv_test/: CMakeLists.txt  benchmark.cpp  build.cpp  flags.h
lib/: sdsl.hpp
lib/alglib/: manual.cpp.html
lib/alglib/src/: alglibinternal.h  alglibmisc.cpp  ap.cpp  dataanalysis.cpp  diffequations.h  fasttransforms.cpp  interpolation.h  linalg.h  optimization.cpp  optimization.h  solvers.cpp  specialfunctions.cpp  specialfunctions.h  statistics.h
tags/: index.html  index.xml
test/: CMakeLists.txt  catch.hpp  main.cpp  tests.cpp  utils.hpp
tuner/: CMakeLists.txt  tuner.cpp  tuner.hpp
tuner/alglib/: CMakeLists.txt
tuner/alglib/src/: alglibinternal.cpp  alglibmisc.h  ap.h  dataanalysis.h  diffequations.cpp  fasttransforms.h  integration.cpp  integration.h  interpolation.cpp  linalg.cpp  solvers.h  statistics.cpp
widgets/: index.html  index.xml
widgets/applications/: index.html
widgets/cite/: index.html
widgets/complexity/: index.html
widgets/contribute/: index.html
widgets/description/: index.html
widgets/features/: index.html
widgets/publications/: index.html
widgets/running-example/: index.html
